--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,13 @@ p, li { color: #383874; font-family: 'Poppins', sans-serif; font-size: 16px; fon
   position: absolute;
   right: 10px;
 }
+
+/* ========= social icons =========== */
+.social-icons {
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.social-icons:hover {
+  color: var(--color-primary);
+}
